# pymscada-pycomm3

./: .pdm-python  README.md  pyproject.toml
docs/: build.md
src/pymscada_pycomm3/: __init__.py  __main__.py  eip_client.py  logix_client.py  logix_map.py
src/pymscada_pycomm3/demo/: pycomm3.yaml
tests/: test_plc.py
